[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/RoomShape/RoomShape.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Tilemap/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/LevelTransition/LevelTransition.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/LevelTransition/level_03__link__level_04.tres" type="Resource" id=5]
[ext_resource path="res://src/LevelTransition/level_04__link__level_oil.tres" type="Resource" id=6]
[ext_resource path="res://src/RatBoss/RatBoss.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/WaterPipe/OilSpawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Levels/Level_04.gd" type="Script" id=9]
[ext_resource path="res://src/EndScreen/EndScreen.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 24 )

[node name="Level_04" instance=ExtResource( 3 )]
script = ExtResource( 9 )

[node name="Bonfire" parent="." index="1"]
position = Vector2( 160, -25 )
FACING = 1

[node name="SpawnPoint" parent="Bonfire" index="2"]
position = Vector2( 16, 0 )

[node name="TileMap" parent="." index="2" instance=ExtResource( 2 )]
collision_layer = 3
tile_data = PoolIntArray( -1, 0, 8, -65536, 0, 65547, -65535, 0, 65547, -65534, 0, 65547, -65533, 0, 65547, -65532, 0, 65547, -65531, 0, 131075, -65530, 0, 2, -65529, 0, 2, -65528, 0, 2, -65527, 0, 2, -65526, 0, 2, -65525, 0, 2, -65524, 0, 2, -65523, 0, 2, -65522, 0, 2, -65521, 0, 2, -65520, 0, 2, -65519, 0, 2, -65518, 0, 2, -65517, 0, 2, -65516, 0, 2, -65515, 0, 2, -65514, 0, 2, -65513, 0, 2, -65512, 0, 2, -65511, 0, 2, -65510, 0, 2, -65509, 0, 2, -65508, 0, 2, -65507, 0, 2, -65506, 0, 2, -65505, 0, 2, -65504, 0, 2, -65503, 0, 2, -65502, 0, 131074, -65501, 0, 65547, -65500, 0, 65547, -65499, 0, 65547, -65498, 0, 65547, -65497, 0, 65547, -65496, 0, 9, 65535, 0, 10, 0, 0, 131083, 1, 0, 131083, 2, 0, 131083, 3, 0, 131083, 4, 0, 131073, 5, 0, 65545, 34, 0, 65544, 35, 0, 131072, 36, 0, 131083, 37, 0, 131083, 38, 0, 131083, 39, 0, 131083, 40, 0, 11, 131071, 0, 10, 65536, 0, 131083, 65537, 0, 131083, 65538, 0, 131073, 65539, 0, 65546, 65540, 0, 65545, 65571, 0, 65544, 65572, 0, 65546, 65573, 0, 131072, 65574, 0, 131083, 65575, 0, 131083, 65576, 0, 11, 196607, 0, 10, 131072, 0, 131073, 131073, 0, 65546, 131074, 0, 65545, 131109, 0, 65544, 131110, 0, 65546, 131111, 0, 131072, 131112, 0, 11, 262143, 0, 10, 196608, 0, 11, 196647, 0, 10, 196648, 0, 11, 327679, 0, 10, 262144, 0, 11, 262183, 0, 10, 262184, 0, 11, 393215, 0, 10, 327680, 0, 11, 327719, 0, 10, 327720, 0, 11, 458751, 0, 10, 393216, 0, 11, 393255, 0, 10, 393256, 0, 11, 524287, 0, 10, 458752, 0, 11, 458791, 0, 10, 458792, 0, 11, 589823, 0, 10, 524288, 0, 11, 524327, 0, 10, 524328, 0, 11, 655359, 0, 10, 589824, 0, 11, 589863, 0, 10, 589864, 0, 11, 720895, 0, 10, 655360, 0, 11, 655399, 0, 10, 655400, 0, 11, 786431, 0, 10, 720896, 0, 11, 720905, 0, 0, 720906, 0, 2, 720907, 0, 2, 720908, 0, 5, 720911, 0, 6, 720912, 0, 2, 720913, 0, 2, 720914, 0, 5, 720917, 0, 6, 720918, 0, 2, 720919, 0, 2, 720920, 0, 5, 720923, 0, 6, 720924, 0, 2, 720925, 0, 2, 720926, 0, 1, 720935, 0, 10, 720936, 0, 11, 851967, 0, 10, 786432, 0, 11, 786436, 0, 6, 786437, 0, 2, 786438, 0, 2, 786439, 0, 2, 786440, 0, 2, 786441, 0, 65537, 786462, 0, 65536, 786463, 0, 2, 786464, 0, 2, 786465, 0, 2, 786466, 0, 2, 786467, 0, 5, 786471, 0, 10, 786472, 0, 11, 917503, 0, 10, 851968, 0, 11, 852007, 0, 10, 852008, 0, 11, 983039, 0, 10, 917504, 0, 11, 917543, 0, 10, 917544, 0, 11, 1048575, 0, 10, 983040, 0, 196609, 983041, 0, 9, 983078, 0, 8, 983079, 0, 196608, 983080, 0, 11, 1114111, 0, 10, 1048576, 0, 131083, 1048577, 0, 11, 1048614, 0, 10, 1048615, 0, 131083, 1048616, 0, 11, 1179647, 0, 10, 1114112, 0, 131083, 1114113, 0, 11, 1114150, 0, 10, 1114151, 0, 131083, 1114152, 0, 11, 1245183, 0, 10, 1179648, 0, 131083, 1179649, 0, 196609, 1179650, 0, 65547, 1179651, 0, 9, 1179684, 0, 8, 1179685, 0, 65547, 1179686, 0, 196608, 1179687, 0, 131083, 1179688, 0, 11, 1310719, 0, 10, 1245184, 0, 131073, 1245185, 0, 65546, 1245186, 0, 65546, 1245187, 0, 65545, 1245220, 0, 65544, 1245221, 0, 65546, 1245222, 0, 65546, 1245223, 0, 131072, 1245224, 0, 11, 1376255, 0, 10, 1310720, 0, 11, 1310759, 0, 10, 1310760, 0, 11, 1441791, 0, 10, 1376256, 0, 11, 1376295, 0, 10, 1376296, 0, 11, 1507327, 0, 65544, 1441792, 0, 196611, 1441793, 0, 2, 1441794, 0, 2, 1441795, 0, 2, 1441796, 0, 2, 1441797, 0, 2, 1441798, 0, 2, 1441799, 0, 2, 1441800, 0, 2, 1441801, 0, 2, 1441802, 0, 2, 1441803, 0, 2, 1441804, 0, 2, 1441805, 0, 2, 1441806, 0, 2, 1441807, 0, 2, 1441808, 0, 2, 1441809, 0, 2, 1441810, 0, 2, 1441811, 0, 2, 1441812, 0, 2, 1441813, 0, 2, 1441814, 0, 2, 1441815, 0, 2, 1441816, 0, 2, 1441817, 0, 2, 1441818, 0, 2, 1441819, 0, 2, 1441820, 0, 2, 1441821, 0, 2, 1441822, 0, 2, 1441823, 0, 2, 1441824, 0, 2, 1441825, 0, 2, 1441826, 0, 2, 1441827, 0, 2, 1441828, 0, 2, 1441829, 0, 2, 1441830, 0, 2, 1441831, 0, 196610, 1441832, 0, 65545 )

[node name="NextLevelTransition" parent="." index="3" instance=ExtResource( 4 )]
position = Vector2( 416, 128 )
next_level = "res://src/Levels/Level_Oil.tscn"
connection = ExtResource( 6 )

[node name="Collider" parent="NextLevelTransition" index="0"]
position = Vector2( -72, 24 )
shape = SubResource( 1 )

[node name="ExitPosition" parent="NextLevelTransition" index="1"]
position = Vector2( -132.106, 47 )

[node name="PreviousLevelTransition" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( -16, 136 )
next_level = "res://src/Levels/Level_03.tscn"
connection = ExtResource( 5 )
FACING = 1

[node name="Collider" parent="PreviousLevelTransition" index="0"]
position = Vector2( 0, 21 )
shape = SubResource( 2 )

[node name="ExitPosition" parent="PreviousLevelTransition" index="1"]
position = Vector2( 65, 40 )

[node name="Player" parent="." index="5"]
position = Vector2( 38, 176 )

[node name="RightWallRayCast" parent="Player" index="5"]
visible = false

[node name="LeftWallRayCast" parent="Player" index="6"]
visible = false

[node name="Collider" parent="Player" index="8"]
visible = false

[node name="ShootingPosition" parent="Player" index="9"]
visible = false

[node name="Camera" parent="Player" index="15"]
editor_draw_screen = false
editor_draw_drag_margin = false

[node name="RoomDetectorLeft" parent="Player" index="16"]
visible = false

[node name="RoomDetectorRight" parent="Player" index="17"]
visible = false

[node name="Hurtbox" parent="Player" index="19"]
visible = false

[node name="RatBoss" parent="." index="6" instance=ExtResource( 7 )]
position = Vector2( 224, 177 )
health = 13

[node name="SpriteTilemap" parent="." index="7"]
tile_data = PoolIntArray( 9, 1, 0, 15, 1, 0, 21, 1, 0, 27, 1, 0 )

[node name="OilSpawner1" parent="." index="8" instance=ExtResource( 8 )]
position = Vector2( 88, 31 )
drop_speed = 40

[node name="Timer" parent="OilSpawner1" index="1"]
autostart = false

[node name="OilSpawner2" parent="." index="9" instance=ExtResource( 8 )]
position = Vector2( 135, 31 )
drop_speed = 40

[node name="Timer" parent="OilSpawner2" index="1"]
autostart = false

[node name="OilSpawner3" parent="." index="10" instance=ExtResource( 8 )]
position = Vector2( 184, 31 )
drop_speed = 40

[node name="Timer" parent="OilSpawner3" index="1"]
autostart = false

[node name="OilSpawner4" parent="." index="11" instance=ExtResource( 8 )]
position = Vector2( 232, 31 )
drop_speed = 40

[node name="Timer" parent="OilSpawner4" index="1"]
autostart = false

[node name="SpawnTimer" type="Timer" parent="." index="12"]
process_mode = 0
wait_time = 5.0
autostart = true

[node name="RoomShape" parent="." index="13" instance=ExtResource( 1 )]
visible = false
position = Vector2( 1, 0 )

[node name="EndScreen" parent="." index="14" instance=ExtResource( 10 )]
visible = false
margin_top = 25.0
margin_bottom = 25.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[editable path="Bonfire"]
[editable path="Bonfire/HealArea"]
[editable path="NextLevelTransition"]
[editable path="PreviousLevelTransition"]
[editable path="Player"]
[editable path="Player/Flame"]
[editable path="Player/Hurtbox"]
[editable path="OilSpawner1"]
[editable path="OilSpawner2"]
[editable path="OilSpawner3"]
[editable path="OilSpawner4"]
